<resources>
    <string name="app_name">if(kakao)2020</string>
    <string name="highlight">Highlight</string>
    <string name="view_all_sessions">전체세션 보기</string>
    <string name="kakao_corp">©kakao corp.</string>
    <string name="menu">메뉴</string>
    <string name="go_to_session_menu">목록보기</string>
    <string name="all_sessions">"All Sessions"</string>
    <string name="close_view">창 닫기</string>
    <string name="interesting_field">관심분야</string>
    <string name="service">서비스</string>
    <string name="business">비즈니스</string>
    <string name="interesting_keyword">관심키워드</string>
    <string name="service_business">서비스・비즈니스</string>
    <string name="personalize">개인화</string>
    <string name="advertise">광고</string>
    <string name="finance">금융</string>
    <string name="tech">기술</string>
    <string name="data">데이터</string>
    <string name="mobility">모빌리티</string>
    <string name="digital_property">디지털자산</string>
    <string name="social_contribution">사회공헌</string>
    <string name="contents">콘텐츠</string>
    <string name="infra">인프라</string>
    <string name="engineering">엔지니어링</string>
    <string name="creator">크리에이터</string>
    <string name="platform">플랫폼</string>
    <string name="b2b">B2B</string>
    <string name="backend">백엔드</string>
    <string name="ai">머신러닝/AI</string>
    <string name="cloud">클라우드</string>
    <string name="infra_dev_ops">인프라/DevOps</string>
    <string name="block_chain">블록체인</string>
    <string name="mobile">모바일</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="web">웹/프론트엔드</string>
    <string name="windows">Windows</string>
    <string name="game">게임개발</string>
    <string name="development_ecosystem">개발생태계</string>
    <string name="development_culture">개발문화</string>
    <string name="hardware">하드웨어</string>
    <string name="embedded">EmbeddedSystem</string>
    <string name="etc">기타</string>
    <string name="clear">초기화</string>
    <string name="accept">적용</string>

    <!--    API CALL ERROR MESSAGE -->
    <string name="server_error">오류가 발생했습니다\n 다시 시도해주세요.</string>
    <string name="client_error">오류가 발생했습니다\n 앱을 다시 실행해주세요.</string>
    <string name="unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="session">Session</string>
    <string name="main_text">if(kakao)2020이\n여러본의 관심 속에 마무리되었습니다.\n우리, 내년에 또 만나요!\n오늘도 카카오는 세상을 바꾸는 중</string>

    <string name="share_fail_message">오류가 발생했습니다\n다시 시도해주세요.</string>
    <string name="share_session">세션 공유하기</string>
    <string name="if_kakao_dev2019">if(kakao)dev2019보기</string>
    <string name="favorites">Favorites</string>
    <string name="ask">문의하기</string>
    <string name="talk_channel">ifkakao(톡채널)</string>
    <string name="ifkakao_email">ifkakao@kakao.com</string>
</resources>