<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.example.ifkakao.view.MenuFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/button_color"
        tools:context=".view.MenuFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            closable_fragment="@{fragment}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/filter_menu" />

        <TextView
            android:id="@+id/session_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/session"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/session_text" />

        <TextView
            android:id="@+id/ask_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/ask"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline" />

        <TextView
            android:id="@+id/talk_channel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/talk_channel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/ask_text" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:adjustViewBounds="true"
            android:src="@drawable/channel_image"
            app:layout_constraintBottom_toBottomOf="@id/talk_channel_text"
            app:layout_constraintLeft_toRightOf="@id/talk_channel_text"
            app:layout_constraintTop_toTopOf="@id/talk_channel_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ifkakao_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/talk_channel_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>