<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.HighlightFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/highlight_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="424dp"
                android:foreground="@color/main_image_filter_color"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image_portrait"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/hand_image"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toTopOf="@id/main_text"
                app:layout_constraintLeft_toLeftOf="@id/main_image"
                app:layout_constraintRight_toRightOf="@id/main_image"
                tools:src="@drawable/shake_hand" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/main_image"
                app:layout_constraintLeft_toLeftOf="@id/main_image"
                app:layout_constraintRight_toRightOf="@id/main_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highlight"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/all_session_button"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="@id/all_session_button" />

            <Button
                android:id="@+id/all_session_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/view_all_sessions"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/main_image" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/highlight_list_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/all_session_button"
                tools:listitem="@layout/item_session" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>